--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
-    "devextreme": "25.1.7",
-    "devextreme-react": "25.1.7",
+    "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.11.0",
