update docker compose + readme

--- a/backend/.env.prod
+++ b/backend/.env.prod
@@ -2,7 +2,7 @@
 PORT=8080
 
 # RedisConfig
-REDIS_HOST=redis
+REDIS_HOST=host.docker.internal
 REDIS_PORT=6379
 REDIS_PASSWORD=
 REDIS_DB=0
@@ -11,7 +11,9 @@ REDIS_DB=0
 JWT_SECRET=your-super-secret-key-change-this-in-production
 
 # ENV
-ENV=development
+ENV=production
 
 # System Config
 ALLOW_MULTIPLE_SESSIONS=false
+
+BACKEND_VERSION=1.0
