feat: integrate Vault for secret management and update configuration handling

--- a/backend/.env
+++ b/backend/.env
@@ -1,19 +1,23 @@
-# ServerConfig
-PORT=8080
+# Application Environment
+APP_ENV=development
 
-# RedisConfig
+# Vault Config
+VAULT_DEV_MODE=true
+VAULT_HOST=http://host.docker.internal
+VAULT_PORT=8200
+VAULT_TOKEN=toor
+VAULT_ROLE=
+
+# Redis Config
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_PASSWORD=
 REDIS_DB=0
 
-# JWTConfig
+# JWT Config
 JWT_SECRET=your-super-secret-key-change-this-in-production
-
-# ENV
-ENV=development
 
 # System Config
 ALLOW_MULTIPLE_SESSIONS=false
 
+# Docker Config
 BACKEND_VERSION=lastest
