--- a/vault/docker-compose.yml
+++ b/vault/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       VAULT_DEV_ROOT_TOKEN_ID: "toor"
       VAULT_DEV_LISTEN_ADDRESS: 0.0.0.0:8200
     command: vault server -dev
+    restart: unless-stopped
 
   # ใช้ curl ยิงไป init ค่าเริ่มต้นใน Vault
   vault-init:
