feat: add MinIO configuration and initialization, update Redis and Vault endpoints, and modify Docker Compose files

--- a/backend/.env
+++ b/backend/.env
@@ -14,6 +14,12 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_DB=0
 
+# MinIO Config
+MINIO_HOST=localhost
+MINIO_PORT=9000
+MINIO_BUCKET=mybucket
+MINIO_USE_SSL=false
+
 # JWT Config
 JWT_SECRET=your-super-secret-key-change-this-in-production
 
