--- a/minio/docker-compose.yml
+++ b/minio/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "9001:9001"
     environment:
       MINIO_ROOT_USER: "minioadmin"
-      MINIO_ROOT_PASSWORD: "minioadmin"
+      MINIO_ROOT_PASSWORD: "miniopassword"
     command: server /data --console-address ":9001"
     volumes:
       - minio_data:/data
